expected/main/gens/primIxShiftL-neg-32.err
ERROR: "actual/main/gens/primIxShiftL-neg-32.lc", line 3
external shlix0_1   {primIxShiftL   0  1} :: Ix 0   -> Ix 1  -> Ix 0
         ^
No generated implementation: 0 is not a valid index limit; should be between 1 and 2147483647

ERROR: "actual/main/gens/primIxShiftL-neg-32.lc", line 4
external shlix1_0   {primIxShiftL   1  0} :: Ix 1   -> Ix 0  -> Ix 1
         ^
No generated implementation: parameter 0 is too low; must be at least 1

ERROR: "actual/main/gens/primIxShiftL-neg-32.lc", line 5
external shlix4_3   {primIxShiftL   4  3} :: Ix 4   -> Ix 3  -> Ix 4
         ^
No generated implementation: 4 is not 2^3 (i.e., 8)

ERROR: "actual/main/gens/primIxShiftL-neg-32.lc", line 6
external shlix100_9 {primIxShiftL 100  9} :: Ix 100 -> Ix 9  -> Ix 100
         ^
No generated implementation: 100 is not 2^9 (i.e., 512)

ERROR: "actual/main/gens/primIxShiftL-neg-32.lc", line 7
external shlix3G_31 {primIxShiftL  3G 31} :: Ix 3G  -> Ix 31 -> Ix 3G
         ^
No generated implementation: 3221225472 is not a valid index limit; should be between 1 and 2147483647

ERROR: Aborting after 5 previously reported errors

